--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,4 @@
+/Tensorflow/workspace/pre-trained-models
+/Tensorflow/models
 /tfod
-/Tensorflow
-/.ipynb_checkpoints
-/ipynb_checkpoints
-.ipynb_checkpoints
+/Tensorflow/protoc
